K8s_files/ulaz/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depo
  labels:
    app: nginx-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              protocol: TCP
