K8s_files/ulaz/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-one
spec:
  ingressClassName: nginx
  rules:
    - host: "ulaz.kras.dhz.hr"
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
